# bvrd_calc_wrapper

./: .gitignore  pyproject.toml  test.ipynb
src/bvrd_calc_wrapper/: BVRDCalculator.py  __init__.py  calculator.py
